# esp32-linux-shell

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
components/duktape/: CMakeLists.txt
components/picoc/: CMakeLists.txt  include.c  interpreter.h  picoc_esp32.h  platform_esp32.c
components/picoc/cstdlib/: stdio.c
components/qrcodegen/: CMakeLists.txt
docs/: index.html
docs/superpowers/specs/: 2026-07-06-esp32-additions-design.md  2026-07-06-esp32-web-desktop-gui.md
include/: config.h.example
src/: CMakeLists.txt  camera.c  camera.h  captive.c  captive.h  cc.h  commands.c  commands.h  dmesg.c  dmesg.h  editor.c  editor.h  fileserver.c  fileserver.h  fun.c  fun.h  gpio_cmd.c  gpio_cmd.h  gui.html  gui_html.h  htop.c  htop.h  http_client.c  http_client.h  idf_component.yml  js.h  lang_c.c  lang_js.c  lang_python.c  main.c  pocketpy.lf  python.h  qrcmd.c  qrcmd.h  sdcard.c  sdcard.h  shell.c  shell.h  temp.c  temp.h  (+4 more)
